# UTHAI-Humanoid

./: .gitignore  LICENSE  README.md  README_old_liew.md
UTHAI-MPPC/: README.md
UTHAI-MPPC/uthai_kdl/: CMakeLists.txt  package.xml
UTHAI-MPPC/uthai_kdl/scripts/: .test_kdl.py.swp  test_kdl.py
UTHAI-MPPC/uthai_mbed/: CHANGELOG.rst
UTHAI-MPPC/uthai_mbed/scripts/: uthai_mbed.py
UTHAI-MPPC/uthai_mbed/stm32/: .gitignore
UTHAI-MPPC/uthai_mbed/stm32/src/: main.cpp
UTHAI-MPPC/uthai_mppc/: CHANGELOG.rst  CMakeLists.txt  package.xml
kdl_parser/kdl_parser/: CMakeLists.txt
kdlo/: CMakeLists.txt  package.xml
kdlo/scripts/: hrl passion.py  ikp.py
kdlo/src/: final_kd.cpp
uthai_bringup/: CMakeLists.txt  package.xml
uthai_bringup/config/: dxl.yaml  dxl_controller.yaml  joints_trajectory_controller.yaml
uthai_bringup/launch/: start_meta_controller.launch
uthai_bringup/scripts/: MoveCoML.csv  uthai_bringup.py
uthai_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
uthai_description/: CMakeLists.txt  package.xml
uthai_description/config/: op3.rviz  rviz_uthai.rviz
uthai_description/launch/: uthai_rviz.launch
uthai_description/meshes/: base.STL  body.STL  l_ankle_pitch.STL  l_ankle_roll.STL  l_foot.STL  l_hip_pitch.STL  l_hip_roll.STL  l_hip_yaw.STL  l_knee_pitch.STL  r_ankle_pitch.STL  r_ankle_roll.STL  r_foot.STL  r_hip_pitch.STL  r_hip_roll.STL  r_hip_yaw.STL  r_knee_pitch.STL
uthai_description/urdf/: materials.xacro  model.urdf  uthai (copy).urdf  uthai.gazebo (copy).xacro  uthai.gazebo.xacro  uthai.gv  uthai.inertia.xacro  uthai.left_leg.xacro  uthai.right_leg.xacro  uthai.transmissions.xacro  uthai.urdf  uthai.urdf (another copy).xacro  uthai.urdf.xacro  uthai.visuals.xacro  uthai_dh.xacro  uthai_macros.xacro  uthai_materials.xacro  uthai_urdf.xacro
uthai_gazebo/: CMakeLists.txt  package.xml
uthai_gazebo/config/: position_controller (copy).yaml  position_controller.yaml
uthai_gazebo/launch/: position_controller.launch  uthai_world.launch
uthai_gazebo/scripts/: Q.csv  qUTHAI1.csv  qUTHAI1_new.csv  test_gazebo_csv.py  test_gazebo_updown.py
uthai_gazebo/worlds/: empty.world
uthai_mbed/: CMakeLists.txt  package.xml
uthai_mbed/scripts/: uthai_mbed.py
uthai_moveit/: .setup_assistant  CMakeLists.txt  package.xml
uthai_moveit/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  uthai.srdf
uthai_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
uthai_nav/: CMakeLists.txt  README.md  package.xml
uthai_nav/documents/: cost_foot.ods  cost_foot2.ods
uthai_nav/launch/: Planner.launch  Planner2.launch
uthai_nav/scripts/: Footstep_Planner.py  Footstep_Planner_new.py  Footstep_call.py  Q.csv  footstep_test.py  moveit.py  qUTHAI1.csv  qUTHAI2.csv  qUTHAI3.csv  test_gazebo.py
uthai_nav/src/: Foot_right_cost_test2.ods  final_cost (another copy).ods  final_cost (copy).ods  final_cost.ods  final_cost_zero.ods  uthai_nav_setup.rviz
uthai_nav/src/map/: .mymap.yaml.swo  .mymap.yaml.swp  .room+dilate.yaml.swp  TEST.yaml  mymap.yaml  mymap3.yaml  mymap4.yaml  room.yaml  room2.yaml  room3.yaml  room4.yaml  scale-room2.yaml
uthai_nav/srv/: GetViaPoint.srv
uthai_simulation/: CMakeLists.txt  package.xml
uthai_simulation/launch/: uthai_demo.launch
uthai_stm32/else/: Dynamixel.cpp  Dynamixel.h
uthai_stm32/lib/dynamixel/: Dynamixel.cpp
uthai_stm32/src/: main.cpp
uthai_utils/DH2URDF/: dh2urdf.py  dh_param_file.ldh  dh_param_file_uthai.ldh  myRobot.gv  myRobot.urdf  myRobot.xacro
uthai_utils/DH2URDF/example/: example.xacro
uthai_utils/ros_installer/: ros_installer_desktop.sh  ros_installer_odroid.sh
