<?xml version="1.0"?>
<package>
  <name>kdlo</name>
  <version>0.0.0</version>
  <description>The kdlo package</description>
  <maintainer email="oeysk@todo.todo">oeysk</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>kdl_parser</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>kdl_pasrer</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
