<?xml version="1.0"?>
<package format="2">
  <name>uthai_mppc</name>
  <version>0.0.1</version>
  <description>ROS packages for the uthai_mppc (meta package)</description>
  <license>BSD</license>
  <maintainer email="sweilz.w@gmail.com">sweilz</maintainer>
  <!-- <author email="....@......com">some one</author> -->
  <url type="repository">https://github.com/UTHAI-Humanoid/UTHAI-MPPC</url>
  <buildtool_depend>catkin</buildtool_depend>
  <!-- <run_depend>uthai,,,,</run_depend> -->
  <export>
    <metapackage/>
  </export>
</package>